--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@sendgrid/mail": "false6.4.0",
     "aws-sdk": "false2.528.0",
     "axios": "false0.19.0",
+    "bcryptjs": "false2.4.3",
     "bluebird": "false3.5.5",
     "body-parser": "1.18.2",
     "compression": "1.7.2",
