--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "debug": "^2.4.5",
     "dotenv": "^4.0.0",
     "express": "4.16.3",
+    "express-bearer-token": "false2.4.0",
     "express-jwt": "5.3.1",
     "express-validation": "1.0.2",
     "express-winston": "2.5.0",
