--- a/package.json
+++ b/package.json
@@ -41,61 +41,59 @@
   ],
   "dependencies": {
     "@sendgrid/mail": "false6.4.0",
-    "aws-sdk": "false2.528.0",
+    "aws-sdk": "false2.585.0",
     "axios": "false0.19.0",
     "bcryptjs": "false2.4.3",
-    "bluebird": "false3.5.5",
-    "body-parser": "1.18.2",
-    "compression": "1.7.2",
-    "cookie-parser": "1.4.3",
-    "cors": "2.8.4",
-    "debug": "^2.4.5",
-    "dotenv": "^4.0.0",
-    "express": "4.16.3",
+    "bluebird": "false3.7.2",
+    "body-parser": "false1.19.0",
+    "compression": "false1.7.4",
+    "cookie-parser": "false1.4.4",
+    "cors": "false2.8.5",
+    "debug": "false4.1.1",
+    "dotenv": "false8.2.0",
+    "express": "false4.17.1",
     "express-bearer-token": "false2.4.0",
-    "express-jwt": "5.3.1",
-    "express-validation": "1.0.2",
-    "express-winston": "2.5.0",
-    "file-type": "false12.3.0",
+    "express-jwt": "false5.3.1",
+    "express-validation": "false1.0.3",
+    "express-winston": "false4.0.1",
+    "file-type": "false12.4.0",
     "fs": "false0.0.1-security",
-    "helmet": "3.12.0",
-    "http-status": "1.0.1",
+    "helmet": "false3.21.2",
+    "http-status": "false1.4.2",
     "images-to-pdf": "false1.0.3",
-    "joi": "10.6.0",
-    "jsonwebtoken": "7.1.9",
+    "joi": "false14.3.1",
+    "jsonwebtoken": "false8.5.1",
     "kue": "false0.11.6",
     "kue-ui": "false0.1.0",
-    "method-override": "^2.3.10",
+    "method-override": "false3.0.0",
     "moment": "false2.24.0",
-    "mongoose": "4.7.4",
-    "morgan": "1.9.0",
+    "mongoose": "false5.7.13",
+    "morgan": "false1.9.1",
     "multiparty": "false4.2.1",
     "node-fetch": "false2.6.0",
-    "object-sizeof": "false1.5.1",
-    "promise-poller": "false1.7.0",
-    "puppeteer": "false1.19.0",
+    "object-sizeof": "false1.5.2",
+    "promise-poller": "false1.9.1",
+    "puppeteer": "false2.0.0",
     "querystring": "false0.2.0",
     "request-ip": "false2.1.3",
-    "request-promise-native": "false1.0.7",
+    "request-promise-native": "false1.0.8",
     "sleep": "false6.1.0",
-    "winston": "2.4.1"
+    "winston": "false3.2.1"
   },
   "devDependencies": {
-    "chai": "4.1.2",
-    "commitizen": "^2.9.6",
-    "coveralls": "^3.0.0",
-    "cross-env": "5.1.4",
-    "cz-conventional-changelog": "1.2.0",
-    "eslint": "3.16.1",
-    "eslint-config-airbnb-base": "7.1.0",
-    "eslint-plugin-import": "1.16.0",
-    "eslint-watch": "2.1.14",
-    "husky": "0.14.3",
-    "istanbul": "1.1.0-alpha.1",
-    "mocha": "3.5.0",
-    "supertest": "3.0.0",
-    "supertest-as-promised": "4.0.2",
-    "validate-commit-msg": "^2.14.0"
+    "chai": "false4.2.0",
+    "coveralls": "false3.0.9",
+    "cross-env": "false6.0.3",
+    "eslint": "false6.7.2",
+    "eslint-config-airbnb-base": "false14.0.0",
+    "eslint-plugin-import": "false2.18.2",
+    "eslint-watch": "false6.0.1",
+    "istanbul": "false0.4.5",
+    "mocha": "false6.2.2",
+    "supertest": "false4.0.2",
+    "supertest-as-promised": "false4.0.2",
+    "validate-commit-msg": "false2.14.0",
+    "yarn-upgrade-all": "false0.5.2"
   },
   "license": "MIT",
   "config": {
