--- a/.gitignore
+++ b/.gitignore
@@ -49,5 +49,6 @@ node_modules
 # Optional REPL history
 .node_repl_history
 
+*.pdf
 server/automation/*.pdf
 server/automation/DS160/images/customer.jpeg
